--- a/index.html
+++ b/index.html
@@ -144,13 +144,6 @@
             <p class="text-center">
                © Yordan Yordanov / F.№ 114452 / Group 37 / Mobile & Web Technologies / Year 2018 - 2019
             </p>
-            <p>
-               <a href="https://jigsaw.w3.org/css-validator/check/referer">
-               <img style="border:0;width:88px;height:31px"
-                  src="https://jigsaw.w3.org/css-validator/images/vcss"
-                  alt="Valid CSS!" />
-               </a>
-            </p>
             <p class="text-center">
                Sitemap:
             </p>
@@ -167,6 +160,13 @@
                <a href="./news.html">Upcoming Events</a> |
                <a href="./register.html">Register</a> |
                <a href="./profile.html">User Profile</a>
+            </p>
+            <p class="text-center">
+               <a href="https://jigsaw.w3.org/css-validator/check/referer">
+               <img style="border:0;width:88px;height:31px"
+                  src="https://jigsaw.w3.org/css-validator/images/vcss"
+                  alt="Valid CSS!" />
+               </a>
             </p>
          </div>
       </footer>
